# infoboard

./: README.md  app.py  config.py  pyproject.toml  requirements.txt  start.sh  todos.txt
app/: __init__.py
app/helper/: helper.py
app/main/: routes.py
app/static/css/: styles.css  weather.css
app/static/css/weather/: weather.css
app/static/js/: weather.js
app/static/js/weather/: weather.js
app/templates/: base.html  weather.html
app/templates/weather/: weather.html
app/weather/: constants.py  helper.py  routes.py  weather_info.py
src/templates/: index.html
