[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Adrian Junge <adjun@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
pytz = "^2024.1"
requests = "^2.32.3"
geocoder = "^1.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
